<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    >         
    
    <LinearLayout 
	    android:orientation="horizontal"
	    android:id="@+id/topbar"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="7dp"
	    android:background="@drawable/blue_gradient"
    >
        <TextView 
			android:id="@+id/textview"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_gravity="center_vertical"
			android:textColor="#ffffff"
			android:textSize="14sp"
			android:text="@string/app_name"
			android:layout_marginLeft="5dp"
			android:textStyle="bold"
		/>
    </LinearLayout>  
    
    <ImageView
        android:id="@+id/img_logo"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
		android:layout_below="@id/topbar"
        android:layout_marginTop="20dp" />
    
    <TextView
        android:layout_below="@id/img_logo"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/app_description" />
 
    
	<Button
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="Login"
	    android:id="@+id/btn_login" />


<com.facebook.widget.LoginButton
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="50dp"
    android:contentDescription="@string/login_text"
    android:gravity="center_horizontal"
    android:scaleType="centerInside"
    fb:login_text=""
    fb:logout_text="" />

</RelativeLayout>