<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffffff"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp" >
    
     <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >

	    <ImageView
	        android:id="@+id/profile_pic"
	        android:src="@drawable/random_user"
	        android:layout_width="70dp"
	        android:layout_height="70dp"
	        android:contentDescription="@string/profile_pic_desc" />
	    
	    <LinearLayout
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:paddingLeft="5dp"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical" >
	    	
	        <TextView
	            android:id="@+id/txt_name"
	            android:text="Pankaj Sharma"
	            android:textStyle="bold"
	            android:textSize="15sp"
	            android:textColor="#000000"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	        
	        <TextView
	            android:id="@+id/txt_user_detail"
	            android:text="Wroking at Autumn."
	            android:layout_marginTop="3dp"
	            android:layout_height="wrap_content"
	            android:textColor="#666666"
	            android:layout_width="match_parent" />
	            
		</LinearLayout>
	
	    <LinearLayout
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical" >
	        
	          <TextView
	            android:id="@+id/txt_last_known_time"
	            android:text="300m away"
	            android:textColor="#0000f0"
	            android:gravity="right"
	            android:textSize="12sp"
	            android:layout_height="wrap_content"
	            android:layout_width="match_parent" />

	          <ImageView
	              android:layout_width="50dp"
	              android:layout_height="50dp"
	              android:contentDescription="@string/location_pic_desc"
	              android:src="@drawable/gmap" />
		
		</LinearLayout>
	</LinearLayout>
	    
	    <TextView
	        android:id="@+id/txt_status"
	        android:text="Flight delayed at Calicut airport. Anyone for coofee?"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10sp"
	        android:textColor="#333333" />
	    
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="right"
	    android:layout_marginTop="3dp" >

	    <TextView
	        android:id="@+id/txt_view_profile"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dp"
	        android:text="@string/view_profile_text"
	        android:textColor="#000099"
	        android:textSize="12sp" />
	    
	    <TextView
	        android:id="@+id/txt_chat"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/chat_text"
	        android:textColor="#000099"
	        android:textSize="12sp" />
	    
	</LinearLayout>

</LinearLayout>
